bdr.BDR2.scala.error
Erreur de compilation :
BDR2:4: error: '=>' expected but '=' found.
    case readMessage ="R" => Right() forward()
                     ^BDR2:5: error: '=>' expected but '=' found.
    case readMessage ="L" => Lift() forward()
                     ^BDR2:6: error: '=>' expected but '=' found.
    case readMessage ="I" => Right() right() forward()
                     ^BDR2:7: error: '=>' expected but '=' found.
    case readMessage ="A" => forward()
                     ^BDR2:8: error: '=>' expected but '=' found.
    case readMessage ="B" =>  forward() forward()
                     ^BDR2:9: error: '=>' expected but '=' found.
    case readMessage ="C" => forward()) forward() forward()
                     ^